# life-core

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.forgejo/workflows/: README.md  ci.yml
.github/workflows/: ci.yml
.omc/sessions/: a69a95eb-d071-491b-8e70-a90255925893.json
.omc/state/: idle-notif-cooldown.json  mission-state.json
alembic/: env.py
alembic/versions/: 2026042401_inner_trace_init.py  v18_add_cost_ledger.py  v18_add_user_id_to_generation_run.py
docs/operations/: rollback-sse.md
finefab_core/: __init__.py  config.py
finefab_core/cache/: __init__.py  multi_tier_cache.py
finefab_core/rag/: __init__.py  pipeline.py
finefab_core/router/: __init__.py  circuit_breaker.py  fallback.py  router.py
finefab_core/services/: __init__.py  router_service.py
life_core/: __init__.py  api.py  audit_analyze_handler.py  audit_api.py  browser_runner_api.py  config_api.py  conversations_api.py  docstore_client.py  events_api.py  goose_api.py  goose_client.py  goose_sessions.py  infra_api.py  langfuse_tracing.py  logs_api.py  mcp_server.py  models_api.py  monitoring_api.py  providers_api.py  stats_api.py  telemetry.py  traces_api.py  tracing.py
life_core/agents/: __init__.py  base.py  contract.py  llm.py  orchestrator.py  qa.py  router.py  spec.py  state_machine.py
life_core/artifacts/: __init__.py  hash.py  models.py  storage.py  versioning.py
life_core/cache/: __init__.py  multi_tier_cache.py
life_core/config/: machines.yaml  models_catalog.yaml  models_overrides.yaml
life_core/evaluations/: __init__.py  harness.py  router.py
life_core/events/: broker.py  schema.py
life_core/generators/: __init__.py  base.py  firmware_generator.py  kicad_generator.py  spec_generator.py  spice_generator.py
life_core/health/: aggregator.py
life_core/inner_trace/: __init__.py  emitter.py  models.py
life_core/integrations/: __init__.py  config_exposure.py  forgejo_schematic.py  governance.py  langfuse.py  workflow_proxy.py
life_core/llm/: context_builder.py
life_core/middleware/: keycloak_auth.py  life_internal_auth.py
life_core/models/: __init__.py  (+1 more)
scripts/: eval_rag_retrieval.py
tests/: _helpers.py  conftest.py  test_audit_analyze_api.py  test_auto_scoring.py  test_backup_restore.py  test_browser_contract.py  test_browser_runner_api.py  test_browser_service.py  test_browser_service_extended.py  test_cache.py  test_cache_spans.py  test_chat_emits_inner_trace.py  test_chat_stream.py  test_chat_trace_id.py  test_config_api.py  test_config_api_dual_stack.py  test_config_endpoint.py  test_conversations_api.py  test_conversations_api_extended.py  test_cost_dashboard_doc.py  test_datasheets_stub.py  test_e2e_cost_row_smoke.py  test_e2e_inner_trace_smoke.py  test_events_api.py  test_events_endpoint.py  test_events_schema.py  test_flow_trigger.py  test_goose_api.py  test_goose_client.py  test_goose_sessions.py  test_governance_endpoint.py  test_grafana_alert_cost.py  test_grafana_dashboard_cost.py  test_grafana_dashboard_inner_trace.py  test_health.py  test_health_aggregator.py  test_infra_api.py  test_infra_api_extended.py  test_integration_otel.py  test_keycloak_auth.py  (+59 more)
(+106 files in other folders)
