[project]
name = "life-core"
version = "0.1.0"
description = "Socle minimal du coeur IA FineFab pour la phase 1."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.13,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "redis>=5.2,<6",
    "qdrant-client>=1.13,<2",
    "anthropic>=0.52,<1",
    "openai>=1.82,<2",
    "mistralai>=1.6,<2",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3,<9",
	"pytest-asyncio>=0.24,<1",
	"pytest-cov>=5.0,<6",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["life_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
