[project]
name = "life-core"
version = "0.1.0"
description = "Socle minimal du coeur IA FineFab pour la phase 1."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.13,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "sse-starlette>=2.0,<3",
    "redis>=5.2,<6",
    "qdrant-client>=1.13,<2",
    "opentelemetry-api>=1.33,<2",
    "opentelemetry-sdk>=1.33,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.33,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<1",
    "opentelemetry-instrumentation-httpx>=0.50b0,<1",
    "litellm>=1.30,<2",
    "langfuse>=2.60,<3",
    "camoufox>=0.4,<1",
    "beautifulsoup4>=4.12,<5",
    "python-multipart>=0.0.18",
    "docker>=7.0.0",
    "mcp>=1.27,<2",
    "pyyaml>=6.0,<7",
    "rank-bm25>=0.2,<1",
    "authlib>=1.3,<2",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9,<3",
    "kiutils>=1.4,<2",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3,<9",
	"pytest-asyncio>=0.24,<1",
	"pytest-cov>=5.0,<6",
	"respx>=0.21,<1",
]
rag = [
    "sentence-transformers>=3.0,<4",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["life_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
addopts = "--cov=life_core --cov-report=term-missing --cov-fail-under=80"

[dependency-groups]
dev = [
    "respx>=0.23.1",
]
